# pytato

./: .gitignore  .gitlab-ci.yml  .pylintrc-local.yml  .test-conda-env-py3.yml  LICENSE  MANIFEST.in  README.rst  array-api-tests.xfails.txt  pyproject.toml  requirements.txt  run-mypy.sh  run-pylint.sh  setup.cfg  setup.py
.basedpyright/: baseline.json
.ci-support/: fix-code-for-docs.sh
.github/workflows/: array_api.yml  autopush.yml  ci.yml
.mypy/: baseline.json
doc/: array.rst  codegen.rst  conf.py  dag.rst  design.rst  distributed.rst  gotchas.rst  index.rst  internal.rst  misc.rst  reference.rst  upload-docs.sh
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/_build/html/_sources/: index.rst.txt
examples/: advection.py  demo.py  demo_distributed_node_duplication.py  dg_tools.py  distributed.py  einsum.py  mpi-distributed.py  mpi.py  partition.py  reduction.py  visualization.py
pytato/: __init__.py  array.py  array_api.py  array_expr.py  cmath.py  codegen.py  contract.py  diagnostic.py  distributed.py  equality.py  function.py  infix.py  loopy.py  mapper.py  mlir.py  normalization.py  normalizer.py  pad.py  partition.py  program.py  raising.py  reductions.py  scalar_expr.py  stringifier.py  symbolic.py  tags.py  target.py  transform.py  typing.py  utils.py  version.py  visualization.py
pytato/analysis/: __init__.py
pytato/codegen/: __init__.py  loopy.py
pytato/distributed/: __init__.py  execute.py  nodes.py  partition.py  tags.py  verify.py
pytato/match/: __init__.py  tofrom.py
pytato/stubs/: pytools.pyi
pytato/transform/: __init__.py  calls.py  dead_code_elimination.py  einsum_distributive_law.py  indirections.py  lower_to_index_lambda.py  materialize.py  metadata.py  parameter_study.py  push_index_to_materialized_nodes.py  remove_broadcasts_einsum.py
pytato/visualization/: __init__.py  ascii.py  dot.py  fancy_placeholder_data_flow.py
test/: scratch.py  sym.pt  test_apps.py  test_codegen.py  test_distributed.py  test_jax.py  test_linalg.py  test_mlir.py  test_pattern_match.py  test_pytato.py  test_transform.py  test_vectorizer.py  testlib.py
