[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytato"
version = "2024.1"
description = "Get Descriptions of Array Computations via Lazy Evaluation"
readme = "README.rst"
license = "MIT"
requires-python = "~=3.10"
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
    { name = "Matt Wala" },
    { name = "Xiaoyu Wei" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "bidict",
    "immutabledict",
    "loopy>=2020.2",
    "pytools>=2025.1.5",
    "pymbolic>=2024.2",
    "typing_extensions>=4",
    "orderedsets",
]

[project.urls]
Homepage = "https://github.com/inducer/pytato"

[tool.hatch.build.targets.sdist]
include = [
    "/pytato",
]

[tool.ruff.lint]
preview = true
extend-select = [
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # flake8-isort
    "N",    # pep8-naming
    "Q",    # flake8-quotes
    "W",    # pycodestyle
    "NPY",   # numpy
    "RUF",
    "UP",
    "TC",
    "SIM",
]
extend-ignore = [
  "E226",
  "E241",
  "E242",
  "E265",
  "N802",
  "E402",
  "N814",
  "N817",
  "C90",

  # numpy random generators---disable for now
  "NPY002",
]

allowed-confusables = [
  "∪", # union
  " ", # nbsp
  ]

[tool.ruff.lint.per-file-ignores]
"examples/advection.py" = ["B023"]
"test/test_linalg.py" = ["N806"]
"doc/*.py" = ["I002"]
"examples/*.py" = ["I002"]

[tool.ruff.lint.isort]
known-first-party = ["pytools", "pymbolic", "loopy", "pyopencl"]
known-local-folder = ["pytato"]
lines-after-imports = 2
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.mypy]
# FIXME
# basedmypy baseline contains spurious errors flagged due to
# https://github.com/python/mypy/issues/17731
# https://github.com/python/mypy/issues/19017

strict = true
warn_unused_ignores = true

default_return = false

# FIXME
disallow_any_explicit = false
disallow_any_expr = false
disallow_any_decorated = false

disable_error_code = [
  "explicit-override",
  "unreachable",
  "redundant-expr",
  "callable-functiontype",
]

[[tool.mypy.overrides]]
module = [
  "islpy",
  "pyopencl.*",
  "jax.*",
  "pygments.*",
  "mako.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "pytato.raising",
]
# We'll be getting rid of it, no point in fixing it.
ignore_errors = true


[tool.basedpyright]
reportImplicitStringConcatenation = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedCallResult = "none"
reportExplicitAny = "none"

# This reports even cycles that are qualified by 'if TYPE_CHECKING'. Not what
# we care about at this moment.
# https://github.com/microsoft/pyright/issues/746
reportImportCycles = "none"

pythonVersion = "3.10"
pythonPlatform = "All"

ignore = [
    # We'll be getting rid of it, no point in fixing it.
    "pytato/raising.py",
]


[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.typos.default.extend-words]
# like the numpy function, array range
arange = "arange"

[tool.typos.files]
extend-exclude = [
]
